--- a/guide_ruestung_eng.htm
+++ b/guide_ruestung_eng.htm
@@ -70,7 +70,7 @@
 		</script>
 
 	</table>
-	<p class=smallnote>* [All Informations about these dates are part of the following order of the protection dates: Weapons/Arrows/Fire/Magic]</p>
+	<p class=smallnote>* [All Informations about these dates are part of the following order of the protection dates: Edge/Point/Dragon fire/Magic]</p>
 
 </center>
 
