--- a/content_g2adb_eng.htm
+++ b/content_g2adb_eng.htm
@@ -94,7 +94,8 @@
 												<!-- p style="font-size:12pt" ><b>Inhalt</b></p>
 					<p><b>Guides</b>: Hier gibt es </p -->
 												<div class=smallnote>
-													<a href="https://github.com/lootabox/g2ultimatestranger" target=_top><img src="img/top.gif" border=0>&nbsp;Github</a><br>
+													<a href="https://github.com/lootabox/g2ultimatestranger" target=_top><img src="img/top.gif" border=0>&nbsp;Github (mod)</a><br>
+													<a href="https://github.com/lootabox/g2ultimatestrangerDB" target=_top><img src="img/top.gif" border=0>&nbsp;Github (database)</a><br>
 													<br>
 													<a href="http://www.mondgesaenge.de/G2ADB/EN" target=_top><img src="img/top.gif" border=0>&nbsp;Original G2ADB</a><br>
 												</div>
