--- a/guide_ruestung_eng.htm
+++ b/guide_ruestung_eng.htm
@@ -9,9 +9,7 @@
 
 <center>
 	<img class=guideheadline src="img/t_ruestung_eng.jpg" />
-	<table cellpadding=2 cellspacing=2 border=0 width=400>
-
-
+	<table>
 		<script>
 			OUT('<TABLE cellSpacing=0 cellPadding=0 align=center border=0 class="problem_index">');
 			OUT('<tr><td><ul>');
@@ -28,23 +26,29 @@
 			OUT('</ul></td></tr>');
 			OUT('</TABLE>');
 
-			OUT('<table cellpadding=2 cellspacing=2 border=0 width=400>');
+			OUT('<table cellpadding=2 cellspacing=2 border=0 width=500>');
 			zaehler = 1;
 			for (i = 0; i < DATA.length; ++i) {
 				var it = DATA[i];
 				if (it.section) {
-					OUT('<tr><td colspan=4 class=section align=center id="section_' + zaehler + '" >' + it.section + '</td></tr>');
+					OUT('<tr><td colspan=8 class=section align=center id="section_' + zaehler + '" >' + it.section + '</td></tr>');
 					++zaehler;
 					if (!it.noheaders) {
-						OUT('<tr><th>&nbsp;</th><th class=itemtabth>Armor</th><th class=itemtabth>Data*</th><th class=itemtabth>Value</th><!--th class=itemtabth>Note</th--></tr>');
-
+						OUT('<tr><th>&nbsp;</th>');
+						OUT('<th class=itemtabth>Armor</th>');
+						OUT('<th class=itemtabth width=30>Blunt</th>');
+						OUT('<th class=itemtabth width=30>Edge</th>');
+						OUT('<th class=itemtabth width=30>Point</th>');
+						OUT('<th class=itemtabth width=30>Magic</th>');
+						OUT('<th class=itemtabth width=30>Dragon fire</th>');
+						OUT('<th class=itemtabth width=50>Value</th>');
+						OUT('</tr>');
 					}
 				}
 				else if (it.changelog) {
-					OUT('<td rowspan=2 valign=top></td>');
-					OUT('<td class=itemcell valign=top colspan=3 height=10><b>' + it.changelog + '</b></td>');
+					OUT('<td class=itemcell valign=top colspan=8 height=10><b>' + it.changelog + '</b></td>');
 					OUT('</tr><tr>');
-					OUT('<td class=itemcell valign=top colspan=3 height=63>' + it.note + '</td>');
+					OUT('<td class=itemcell valign=top colspan=8 height=63>' + it.note + '</td>');
 					OUT('</tr>');
 					OUT('<tr></tr>');
 				}
@@ -58,20 +62,21 @@
 					OUT('<tr>');
 					OUT('<td class=itempic rowspan=2>' + goto_modifier + '<img height=120 src="' + it.pic + '" border=0></td>');
 					OUT('<td class=itemcell' + class_modifier + ' valign=top height=40><b>' + it.name + '</b></td>');
-					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + it.data + '</td>');
-					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + it.value + '&nbsp;</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.p_blunt || '-') + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.p_edge || '-') + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.p_point || '-') + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.p_magic || '-') + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.p_fire || '-') + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' valign=top align=center>' + (it.value || '-') + '&nbsp;</td>');
 					OUT('</tr><tr>');
-					OUT('<td class=itemcell' + class_modifier + ' colspan=3 valign=top>' + it.note + '</td>');
+					OUT('<td class=itemcell' + class_modifier + ' colspan=7 valign=top>' + it.note + '</td>');
 					OUT('</tr>');
 					OUT('<tr></tr>');
 				}
 			}
-
 		</script>
-
 	</table>
-	<p class=smallnote>* [All Informations about these dates are part of the following order of the protection dates: Edge/Point/Dragon fire/Magic]</p>
-
+	<p class=smallnote>&nbsp;</p>
 </center>
 
 </html>
