--- a/guide_runen_eng.htm
+++ b/guide_runen_eng.htm
@@ -82,7 +82,7 @@
 					if (it.pic)				OUT('(rune) ' + it.mana);
 					if (it.maxlevel)		OUT(' per tier (max ' + it.mana*it.maxlevel + ')');
 					if (it.pic && it.pic2)	{ OUT(', ');	if (it.maxlevel) OUT('<br>') };
-					if (it.pic2)			OUT('(scroll) ' + Math.max(5, Math.floor(it.mana/10)*5));
+					if (it.pic2)			OUT('(scroll) ' + Math.floor((it.mana+1)/2));
 					if (it.maxlevel)		OUT(' per tier (max ' + it.maxlevel*Math.max(5, Math.floor(it.mana/10)*5) + ')');
 					OUT('</td></tr>');
 				}
