Styling fix, added note for firefox, fixed scroll mana cost

--- a/content_g2adb_eng.htm
+++ b/content_g2adb_eng.htm
@@ -75,6 +75,7 @@
 														<p>Beyond those the other functionalities of the original database are disabled and hidden. This database is
 															built on top of the downloadable version of <i><b>Gothic II Addon Database</b></i> site. All web design credit
 															goes to authors of the original site.
+																<p><i>Note:</i> In case left menu does not work on Firefox;<br>go to <i>about:config</i> and set <i>security.fileuri.strict_origin_policy</i> to <i>false</i>.
 
 															<!-- END: TEXT MITTE ---------------------------------------------->
 
