--- a/guide_handling_eng.htm
+++ b/guide_handling_eng.htm
@@ -12,7 +12,7 @@
 
 
 
-	<table border=0 style="table-layout:fixed;" cellpadding=0 cellspacing=0>
+	<table border=0 style="table-layout:fixed;margin-left:300px;" cellpadding=0 cellspacing=0>
 		<tr>
 			<td width=610>
 				<script>
@@ -67,8 +67,8 @@
 			</td>
 			<td valign=top width=180>
 				<script>
-					OUT('<TABLE cellSpacing=0 cellPadding=0 width=170 align=center border=0 class="problem_index">');
-					OUT('<tr><td><ol style="margin-left: 30px">');
+					OUT('<TABLE cellSpacing=0 cellPadding=0 width=300 align=center border=0 class="problem_index">');
+					OUT('<tr><td><ol>');
 					var zaehler = 1;
 
 					for (i = 0; i < DATA.length; ++i) {
